# nyaadesu

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: example.rs  simple.rs  table.rs
src/: lib.rs  scraping.rs  types.rs
